# context-aware-rag

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.3rdparty  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copy-pr-bot.yaml
.github/scripts/: check_copyright_headers.py  check_python_licenses.sh  license_diff_csv.py  poll-downstream-pipeline.py  trigger-downstream-pipeline.sh
.github/workflows/: ci.yml  deploy-pages.yaml  license-diff.yaml
config/: adv_graph_prompt.yaml  adv_graph_prompt_benchmark.yaml  adv_graph_prompt_benchmark_2.yaml  adv_graph_prompt_no_chunk_reader.yaml  config-qdrant-example.yaml  config.yaml  config_lvs.yaml  cot_prompt.yaml
data/configs/: cot.yaml  frag.yaml  grag.yaml  planner.yaml  planner_vlm.yaml  qdrant_vrag.yaml  vlm.yaml  vrag.yaml  vrag_els.yaml
docker/: Dockerfile  Makefile  README.md
docker/configs/: otel-collector-config.yml
docker/deploy/: compose.yaml  storage.yaml  telemetry.yaml
docs/: QDRANT_INTEGRATION.md  README.md
docs/source/: code-of-conduct.md  conf.py  contributing.md  index.md  metrics.md  release-notes.md  troubleshooting.md  vss.md
docs/source/examples/: index.md  nat_ex.md  pdf_qna.md
docs/source/guides/: api.md  library.md
docs/source/guides/aiq/: aiq_function.md  aiq_install.md  aiq_service.md  index.md
docs/source/guides/components/: functions.md  index.md  tools.md
docs/source/guides/docker/: compose.md  docker.md  helm.md  index.md
docs/source/guides/nat/: index.md  nat_function.md  nat_install.md  nat_service.md
docs/source/guides/usage/: document_ingestion.md  initialization.md  retrieval.md
docs/source/intro/: advanced-setup.md  build.md  index.md  setup.md
docs/source/overview/: architecture.md  configuration.md  experimental.md  features.md  index.md
examples/: online_summarize.py  pdf_qna.ipynb  qna_nat.ipynb
helm/: nvidia-blueprint-carag-1.0.0.tgz
service/: models.py  service.py
src/vss_ctx_rag/aiq/: register_in.py  register_ret.py  utils.py
src/vss_ctx_rag/aiq/workflow/: register_tool_call_workflow.py  tool_call_workflow.py
src/vss_ctx_rag/aiq_config/function/: config-ingestion-function.yml  config-retrieval-function.yml
src/vss_ctx_rag/aiq_config/workflow/: config-ingestion-workflow.yml  config-retrieval-workflow.yml
src/vss_ctx_rag/context_manager/: context_manager.py  context_manager_handler.py
src/vss_ctx_rag/functions/rag/: chat_function.py  config.py
src/vss_ctx_rag/functions/rag/adv_graph_rag/: adv_graph_rag_func.py  adv_graph_retrieval.py
src/vss_ctx_rag/functions/rag/foundation_rag/: foundation_ingestion_func.py  foundation_retrieval_func.py
src/vss_ctx_rag/functions/rag/graph_rag/: constants.py  graph_extraction.py  prompt.py  prompt_builder.py  prompt_config.py
src/vss_ctx_rag/functions/rag/graph_rag/ingestion/: base.py
src/vss_ctx_rag/functions/rag/graph_rag/retrieval/: base.py  graph_retrieval.py  planner.py  planner_retrieval.py
src/vss_ctx_rag/functions/rag/graph_rag/tools/: graph_search_tool.py
src/vss_ctx_rag/functions/rag/vector_rag/: vector_retrieval_func.py
src/vss_ctx_rag/functions/summarization/: __init__.py  batch.py  config.py  offline_batch.py  structured_inference.py  summary_retriever.py  vlm_structured.py  vlm_structured_base.py  vlm_structured_online.py
src/vss_ctx_rag/models/: state_models.py  tool_models.py
src/vss_ctx_rag/tools/: external_rag_tool.py
src/vss_ctx_rag/tools/embedding/: embedding_tool.py
src/vss_ctx_rag/tools/health/: rag_health.py
src/vss_ctx_rag/tools/image/: image_fetcher.py
src/vss_ctx_rag/tools/llm/: llm_handler.py
src/vss_ctx_rag/tools/reranker/: reranker_tool.py
src/vss_ctx_rag/tools/storage/: __init__.py  elasticsearch_db.py  milvus_db.py  neo4j_db.py  qdrant_db.py  storage_tool.py
src/vss_ctx_rag/utils/: ctx_rag_logger.py  external_rag_client.py  utils.py
tests/: test_utils.py
